# tootdo

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: cli.rs  main.rs  text_nav.rs  todoitem.rs  todolist.rs
