[package]
name = "tootdo"
version = "0.1.0"
authors = ["Jennifer Glauche <=^.^=@rusty.kittenme.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
toml = "0.5.5"
chrono = "0.4.9"
ansi_term = "0.12.1"
console = "0.9.0"
termion = "1.5.3"

